--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,13 +5,13 @@ import LinkedIn from "./icons/LinkedIn.astro";
 ---
 <footer class="contact-section">
   <div class="contact-links">
-    <a href="mailto:youremail@example.com" class="contact-link">
+    <a href="mailto:gerardo.jimenezarguelles@gmail.com" class="contact-link">
       <Mail class="size-5"/>
     </a>
-    <a href="https://github.com/yourusername" target="_blank" class="contact-link">
+    <a href="https://github.com/gerashdo" target="_blank" class="contact-link">
       <GitHub class="size-5"/>
     </a>
-    <a href="https://linkedin.com/in/yourusername" target="_blank" class="contact-link">
+    <a href="https://www.linkedin.com/in/gerardo-jimenez-arguelles/" target="_blank" class="contact-link">
       <LinkedIn class="size-5"/>
     </a>
   </div>
