--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import Nav from "./Nav.astro"
 
 const title = "Hi there!"
 const position = "Software Engineer"
-// const description = "Transforming ideas into powerful, user-focused applications."
+const description = "Transforming ideas into powerful, user-focused applications."
 ---
 <header class="header">
   <div>
@@ -12,7 +12,7 @@ const position = "Software Engineer"
       <span id="name">I'm Gerardo Jiménez Argüelles</span>
     </h1>
     <h2 class="poppins-semibold text-muted">{position}</h2>
-    <!-- <p>{description}</p> -->
+    <p>{description}</p>
   </div>
   <Nav />
 </header>
