--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ const description = "Transforming ideas into powerful, user-focused applications
       <span id="name">I'm Gerardo Jiménez Argüelles</span>
     </h1>
     <h2 class="poppins-semibold text-muted">{position}</h2>
-    <p>{description}</p>
+    <!-- <p>{description}</p> -->
   </div>
   <Nav />
 </header>
