--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,7 +1,9 @@
 ---
+import SectionTitle from "./SectionTitle.astro"
 ---
 
 <section id="about">
+  <SectionTitle title="About Me" />
   <p class="text-muted">
     With three years of hands-on experience in software development, I love building <span class="accent-text second">web</span> and mobile apps that make a difference. I’m skilled in <span class="accent-text third">Python, Django, and React.js</span>, and have tackled everything from developing <span class="accent-text first">APIs</span> and full-stack features to enhancing app performance. 
   </p>
@@ -16,9 +18,9 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+  }
 
-    p {
-      padding-inline: 1rem;
-    }
+  p {
+    padding-inline-start: 1rem;
   }
 </style>
