--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,6 @@
 
 <nav>
-  <a href="#about" class="active">About</a>
+  <a href="#about" class="active">About Me</a>
   <a href="#experience">Experience</a>
   <a href="#projects">Projects</a>
 </nav>
