--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import ProjectList from '../components/ProjectsList.astro';
 import Contact from '../components/Contact.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Gerardo Jimenez">
 	<div class="left">
 		<div class="left-left"></div>
 		<div class="left-right">
