--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@
   --secondary: #89CE94;
   --thirdary: #3993DD;
   --background: #071013;
-  --bachground-light: #171307;
+  --background-light: #171307;
   --background-transparent: rgba(255, 204, 0, 0.05);
 
   font-size: 12px;
