Change responsive behaviour

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Contact from '../components/Contact.astro';
 		}
 	}
 
-	@media (width >= 1000px) {
+	@media (width >= 1130px) {
 		.left {
 			width: 50%;
 
@@ -90,6 +90,24 @@ import Contact from '../components/Contact.astro';
 		.right {
 			.main-container {
 				width: 70%;
+			}
+		}
+	}
+
+	@media (width >= 1980px) {
+		.left {
+			.left-left {
+				width: 50%;
+			}
+
+			.left-right {
+				width: 50%;
+			}
+		}
+
+		.right {
+			.main-container {
+				width: 50%;
 			}
 		}
 	}
