--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
   --background-light: #171307;
   --background-transparent: rgba(255, 204, 0, 0.05);
 
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .text-light {
@@ -114,12 +114,14 @@ html {
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: "Poppins", Arial;
   font-weight: 400;
   color: var(--text);
   background-color: var(--background);
   background: linear-gradient(90deg, rgba(7,16,19,1) 41%, rgba(31,25,7,1) 100%);
+  display: flex;
+  justify-content: center;
 }
 
 svg {
@@ -189,7 +191,7 @@ svg {
 }
 
 
-@media (width >= 500px) {
+@media (width >= 555px) {
   :root {
     font-size: 18px;
   }
