--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -46,7 +46,7 @@ if (image) {
   .project-card {
     padding: 2rem 1.5rem;
     border-radius: 0.5rem;
-    border-top: 2px solid transparent;
+    border: 3px solid var(--primary-transparent);
     transition: all 0.3s ease;
     display: flex;
     flex-direction: column;
@@ -65,26 +65,28 @@ if (image) {
     }
   }
 
-  .project-card:hover {
-    background-color: var(--background-transparent);
-    box-shadow: 0 4px 30px var(--background-light);
-    backdrop-filter: blur(9px);
-    -webkit-backdrop-filter: blur(9px);
-    border-color: var(--background-transparent);
-
-    h3 {
-      transform: translateX(0.5rem);
-    }
-  }
-
   img {
     border-radius: 0.3rem;
     /* border: 1px solid var(--muted); */
   }
 
-  @media (width >= 1000px) {
+  @media (width >= 1130px) {
     .project-card {
+      border: solid transparent;
+      border-width: 2px 0 0 0;
       flex-direction: row;
+    }
+
+    .project-card:hover {
+      background-color: var(--background-transparent);
+      box-shadow: 0 4px 30px var(--background-light);
+      backdrop-filter: blur(9px);
+      -webkit-backdrop-filter: blur(9px);
+      border-color: var(--background-transparent);
+
+      h3 {
+        transform: translateX(0.5rem);
+      }
     }
   }
 </style>
