--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,12 +29,20 @@ const { title } = Astro.props;
 	.container {
 		display: flex;
 		flex-direction: column;
+		width: 100%;
 		height: 100vh;
 	}
 
-	@media (width >= 1000px) {
+	@media (width >= 435px) {
+		.container {
+			width: 80%;
+		}
+	}
+
+	@media (width >= 1130px) {
 		.container {
 			flex-direction: row;
+			width: 100%;
 		}
 	}
 </style>
