Change layaout desing and behaviour

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -21,6 +21,6 @@ import SectionTitle from "./SectionTitle.astro"
   }
 
   p {
-    padding-inline-start: 1rem;
+    padding-inline: 1rem;
   }
 </style>
