--- a/src/components/TimelineItem.astro
+++ b/src/components/TimelineItem.astro
@@ -36,7 +36,7 @@ const { date, title, place, actions, technologies } = Astro.props;
     gap: 1rem;
     position: relative;
     border-radius: 1rem;
-    padding: 1.5rem;
+    padding: 1rem;
     transition: all 0.3s ease-in;
   }
 
@@ -53,5 +53,11 @@ const { date, title, place, actions, technologies } = Astro.props;
 
   .timeline-item ul li {
     margin-inline-start: 1rem;
+  }
+
+  @media (width >= 1130px) {
+    .timeline-item {
+      padding: 1.5rem;
+    }
   }
 </style>
