--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,6 +72,7 @@ import Contact from '../components/Contact.astro';
 		.right {
 			width: 50%;
 			overflow-y: auto;
+			scroll-behavior: smooth;
 		}
 	}
 
