--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -18,8 +18,8 @@ if (image) {
   if (!images[image]) throw new Error(`"${image}" does not exist in glob: "src/assets/*.{jpeg,jpg,png,gif}"`);
 }
 ---
-<a href={link} target="_blank" class="project-link">
-  <div class="project-card">
+<div class="project-card">
+  <a href={link} target="_blank" class="project-link">
     <div class="image-container">
       {image && images && (
         <Image src={images[image]()} alt="Project image" width={150}/>
@@ -34,24 +34,21 @@ if (image) {
         ))}
       </div>
     </div>
-  </div>
-</a>
+  </a>
+</div>
 
 <style>
   .project-link {
-    text-decoration: none;
-    color: inherit;
-  }
-
-  .project-card {
-    padding: 2rem 1.5rem;
+    align-items: start;
     border-radius: 0.5rem;
     border: 3px solid var(--primary-transparent);
-    transition: all 0.3s ease;
+    color: inherit;
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    align-items: start;
+    padding: 2rem 1.5rem;
+    text-decoration: none;
+    transition: all 0.3s ease;
 
     h3 {
       transition: all 0.3s ease;
@@ -67,17 +64,16 @@ if (image) {
 
   img {
     border-radius: 0.3rem;
-    /* border: 1px solid var(--muted); */
   }
 
   @media (width >= 1130px) {
-    .project-card {
+    .project-link {
       border: solid transparent;
       border-width: 2px 0 0 0;
       flex-direction: row;
     }
 
-    .project-card:hover {
+    .project-link:hover {
       background-color: var(--background-transparent);
       box-shadow: 0 4px 30px var(--background-light);
       backdrop-filter: blur(9px);
